@@ -31,7 +31,7 @@ import (
 
 const (
 	crdGroup           = "apiextensions.k8s.io"
-	crdVersion         = "v1beta1"
+	crdVersion         = "v1"
 	crdKind            = "CustomResourceDefinition"
 	crdKinds           = "customresourcedefinitions"
 	sourcesLabelKey    = "duck.knative.dev/source"
